--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./node_modules/web3.js-browser/build/web3.js"></script>
+    <!-- <script src="./node_modules/web3.js-browser/build/web3.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/gh/andy0130tw/web3.js-browser@0.2.0/build/web3.min.js"></script>
   </head>
   <body>
     <h1 class="total"><span id="ttt"></span>/5555</h1>
